# mini-dnn-cpp

./: CMakeLists.txt  demo.cc
gpu_layer/: gpu_conv.cu  gpu_conv.h
src/: CMakeLists.txt  mnist.cc
src/gpu_layer/: CMakeLists.txt  gpu_conv.h
src/layer/: conv.cc  conv.h  conv_gpu.cc  conv_gpu.cu  conv_gpu.cuh  conv_gpu.h
